--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "scripts": {
     "format": "prettier --write \"**/*.ts\"",
-    "test": "jest"
+    "lint": "prettier --check \"**/*.ts\"",
+    "test": "jest",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "lint-staged": {
+    "*.ts": "prettier --check"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "husky": "^8.0.1",
     "jest": "^26.6.3",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "ts-jest": "^26.5.6",
     "typescript": "^4.8.3"
